frontend/src/app/home/home.component.scss
.main-content {
    max-width: 100%;
    height: 100vh;
    aspect-ratio: 9/16;
    background-color: #fff;
    scroll-behavior: smooth;
    overflow-y: auto;
    overflow-x: hidden;
    .header {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        padding: 20px;
        img {
            height: 46px;
        }
        p {
            font-size: 32px;
            font-weight: bolder;
            margin: 0px;
            padding: 0px;
        }
    }
}

.title {
    font-size: 18pt;
    font-weight: bold;
}

hr.solid {
    border-top: 1px solid #bbb;
}

.section {
    padding: 10px;
    .story-previews {
        display: flex;
        flex-direction: row;
        gap: 10px;
        .story-preview {
            display: flex;
            align-items: flex-end;
            height: 250px;
            aspect-ratio: 9/16;
            background-color: red;
            border-radius: 5px;
            cursor: pointer;
            transition: all 0.1s;
            &:active {
                transform: scale(0.95);
            }
            p {
                color: #fff;
                font-weight: bold;
                margin: 10px;
            }
        }
    }
}

